master : factory implementation

--- a/app/views/clients/new.html
+++ b/app/views/clients/new.html
@@ -44,7 +44,19 @@
           <label for="right-label" class="right inline">Gender</label>
         </div>
         <div class="small-9 columns">
-          <!--todo-->
+          <input type="radio" name="pokemon" value="Male" id="pokemonRed"><label for="pokemonRed">Male</label>
+          <input type="radio" name="pokemon" value="Female" id="pokemonBlue"><label for="pokemonBlue">Female</label>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="small-8 columns">
+      <div class="row">
+        <div class="small-3 columns">
+          <a href="#" class="button">Submit</a>
+        </div>
+        <div class="small-9 columns">
         </div>
       </div>
     </div>
