master: client created successfully

--- a/app/views/clients/new.html
+++ b/app/views/clients/new.html
@@ -46,8 +46,8 @@
             <label for="right-label" class="right inline">Gender</label>
           </div>
           <div class="small-9 columns">
-            <input type="radio" name="pokemon" value="Male" id="pokemonRed" ng-model="client.gender" ><label for="pokemonRed">Male</label>
-            <input type="radio" name="pokemon" value="Female" id="pokemonBlue" ng-model="client.gender"><label for="pokemonBlue">Female</label>
+            <input type="radio" value="true" ng-model="client.male_gender" ><label>Male</label>
+            <input type="radio" value="false" ng-model="client.male_gender"><label>Female</label>
           </div>
         </div>
       </div>
