master : client detail

--- a/app/views/clients/edit.html
+++ b/app/views/clients/edit.html
@@ -1,6 +1,6 @@
 <p>This is new client view.</p>
 
-<div ng-controller="ClientCtrl">
+<div ng-controller="ClientEditCtrl">
 
   <form ng-submit="create()">
     <div class="row">
