--- a/app/views/clients/index.html
+++ b/app/views/clients/index.html
@@ -1,5 +1,54 @@
 <div ng-controller="ClientIndexCtrl">
+
   <div>
+    <div class="row">
+      <div class="small-8 columns">
+        <div class="row">
+          <div class="small-3 columns">
+            <label for="right-label" class="right inline">First Name</label>
+          </div>
+          <div class="small-9 columns">
+            <label>{{ client.first_name }}</label>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-8 columns">
+        <div class="row">
+          <div class="small-3 columns">
+            <label for="right-label" class="right inline">Last Name</label>
+          </div>
+          <div class="small-9 columns">
+            <label>{{ client.last_name }}</label>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-8 columns">
+        <div class="row">
+          <div class="small-3 columns">
+            <label for="right-label" class="right inline">Date of Birth</label>
+          </div>
+          <div class="small-9 columns">
+            <label>{{ client.dob }}</label>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-8 columns">
+        <div class="row">
+          <div class="small-3 columns">
+            <label for="right-label" class="right inline">Gender</label>
+          </div>
+          <div class="small-9 columns">
+            <label>{{ client.male_gender }}</label>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 </div>
