master : implement service for common attribute

--- a/app/views/clients/index.html
+++ b/app/views/clients/index.html
@@ -51,9 +51,7 @@
     </div>
   </div>
 
-  <div ng-controller="ClientExperienceIndexCtrl" ng-init="init(client.id)">
-
-    <input type="text"  ng-model="experience.clientId"  ng-init="experience.clientId=client.id"/>
+  <div ng-controller="ClientExperienceIndexCtrl">
 
     <table>
       <tr>
