master : add factory to call location

--- a/app/views/clients/index.html
+++ b/app/views/clients/index.html
@@ -61,7 +61,7 @@
         <th>end time</th>
       </tr>
       <tr ng-repeat="exp in experiences">
-        <td>{{ exp.company }}</td>
+        <td>{{ exp.company_name }}</td>
         <td>{{ exp.position }}</td>
         <td>{{ exp.started_on }}</td>
         <td>{{ exp.ended_on }}</td>
