--- a/app/views/experiences/edit.html
+++ b/app/views/experiences/edit.html
@@ -23,7 +23,7 @@
             <label for="right-label" class="right inline">position</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" id="right-label" placeholder="your position" ng-model="exp.company">
+            <input type="text" id="right-label" placeholder="your position" ng-model="exp.position">
           </div>
         </div>
       </div>
