--- a/app/views/experiences/edit.html
+++ b/app/views/experiences/edit.html
@@ -3,7 +3,7 @@
 <div ng-controller="ClientExperienceEditCtrl">
 
   <form ng-submit="create()">
-    <input type="hidden" id="client_id" ng-model="exp.client_id">
+    <input type="text" id="client_id" ng-model="exp.client_id">
     <div class="row">
       <div class="small-8 columns">
         <div class="row">
