master : edit basic client information

--- a/app/views/clients/index.html
+++ b/app/views/clients/index.html
@@ -51,6 +51,10 @@
     </div>
   </div>
 
+  <div ng-click="editBasicData(client.id)">
+    edit basic data
+  </div>
+
   <div ng-controller="ClientExperienceIndexCtrl">
 
     <table>
