--- a/app/views/experiences/new.html
+++ b/app/views/experiences/new.html
@@ -2,7 +2,7 @@
 
 <div ng-controller="ClientExperienceEditCtrl">
 
-  <form ng-submit="update()">
+  <form ng-submit="create()">
     <input type="hidden" id="client_id" ng-model="exp.client_id">
     <div class="row">
       <div class="small-8 columns">
@@ -56,7 +56,7 @@
       <div class="small-8 columns">
         <div class="row">
           <div class="small-3 columns">
-            <input type="submit" value="update">
+            <input type="submit" value="Submit">
           </div>
           <div class="small-9 columns">
           </div>
