--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,15 +1,23 @@
 // bower:scss
 // endbower
 
+@font-face {
+  font-family: BebasFont;
+  src: url(../font/BebasNeueRegular.ttf)
+}
+
+
+
 .browsehappy {
   margin: 0.2em 0;
-  background: #ccc;
+  background: #fff;
   color: #000;
   padding: 0.2em 0;
 }
 
 body {
   padding: 0;
+  background-color: #fff;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -63,6 +71,77 @@ body {
   p + h4 {
     margin-top: 28px;
   }
+}
+
+
+.imgtophost {
+  width:100%;
+  background-image:url(../images/headerbackgroundrepeat.png);
+  background-size:auto 300px;
+  background-position:center
+}
+
+.imgtopdiv {
+  min-height:200px;
+  height:300px;
+  max-height:300px;
+  min-width:300px;
+  max-width:1000px;
+  margin:0px auto;
+  background-image:url(../images/headerbackground.png);
+  position:relative;
+  background-size:cover;
+  background-position:center
+
+}
+
+.logotophost {
+  height:100%;
+  width:300px;
+  margin:0px auto;
+}
+
+.stepshost{
+  min-width:500px;
+  max-width:1000px;
+  margin:0px auto;
+  height:auto;
+  position:relative
+}
+
+.stepdiv{
+  padding:10px 0 20px 0;
+  border-bottom:1px solid #666666;
+  float:left;
+  width:100%;
+  font-family:'BebasFont';
+}
+
+.stepnostyle{
+  float:left;
+  width:50px;
+  height:50px;
+  position:absolute;
+  font-size:20px;
+}
+
+.stepdescription{
+  float:left;
+  background-color:#fff;
+  width:100%;
+  margin:0 0% 0 50px;
+  border-left:dotted 5px #c8c8c8;
+  font-size:24px
+}
+
+.stepdescription div{
+  float:left;
+  margin:10px;
+  font-size:40px;
+}
+
+.stepdescription div img {
+  width:90%;
 }
 
 /* Responsive: Portrait tablets and up */
