master : delete experience

--- a/app/views/experiences/edit.html
+++ b/app/views/experiences/edit.html
@@ -56,9 +56,10 @@
       <div class="small-8 columns">
         <div class="row">
           <div class="small-3 columns">
-            <input type="submit" value="update">
+            <input type="submit" class="button" value="update">
           </div>
           <div class="small-9 columns">
+            <a ng-click="delete(exp.id)" class="button">delete</a>
           </div>
         </div>
       </div>
