--- a/app/views/experiences/new.html
+++ b/app/views/experiences/new.html
@@ -1,6 +1,6 @@
 <p>Please add your new experience</p>
 
-<div ng-controller="ClientExperienceEditCtrl">
+<div ng-controller="ClientExperienceNewCtrl">
 
   <form ng-submit="create()">
     <input type="hidden" id="client_id" ng-model="exp.client_id">
