fixing link adding datepicker

--- a/app/views/clients/edit.html
+++ b/app/views/clients/edit.html
@@ -35,7 +35,7 @@
             <label for="right-label" class="right inline">Date of Birth</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" value="02/16/12" data-date-format="mm/dd/yy" id="dp2" ng-model="client.dob">
+            <input type="text" class="span2" value="02/16/12" data-date-format="dd/mm/yy" id="datepicker" ng-model="client.dob">
           </div>
         </div>
       </div>
@@ -74,6 +74,15 @@
         disableDblClickSelection: true
       });
     });
+
+    $(function() {
+      $( "#datepicker" ).datepicker();
+    });
+
+    $( "#datepicker" ).datepicker({
+      inline: true
+    });
+
   </script>
 
 </div>
