--- a/app/views/clients/new.html
+++ b/app/views/clients/new.html
@@ -31,7 +31,7 @@
       <div class="small-8 columns">
         <div class="row">
           <div class="small-3 columns">
-            <label for="right-label" class="right inline">Date of Birth</label>
+            <label for="right-label" class="right inline">Date sof Birth</label>
           </div>
           <div class="small-9 columns">
             <input type="text" class="span2" value="02/16/12" data-date-format="mm/dd/yy" id="dp2" ng-model="client.dob">
