--- a/app/views/experiences/new.html
+++ b/app/views/experiences/new.html
@@ -35,7 +35,7 @@
             <label for="right-label" class="right inline">Start date</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" value="02/16/12" data-date-format="mm/dd/yy" id="dp2" ng-model="exp.started_on">
+            <input type="text" class="span2 date_picker1" value="02/16/12" data-date-format="mm/dd/yy" id="dp1" ng-model="exp.started_on">
           </div>
         </div>
       </div>
@@ -64,15 +64,4 @@
       </div>
     </div>
   </form>
-
-  <script>
-    $(function () {
-      window.prettyPrint && prettyPrint();
-      $('#dp1').fdatepicker({
-        format: 'mm-dd-yyyy',
-        disableDblClickSelection: true
-      });
-    });
-  </script>
-
 </div>
