--- a/app/views/experiences/new.html
+++ b/app/views/experiences/new.html
@@ -47,7 +47,7 @@
             <label for="right-label" class="right inline">end date</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" value="02/16/12" data-date-format="mm/dd/yy" id="dp2" ng-model="exp.ended_on">
+            <input type="text" class="span2 date_picker1" value="02/16/12" data-date-format="mm/dd/yy" id="dp2" ng-model="exp.ended_on">
           </div>
         </div>
       </div>
