--- a/app/views/clients/new.html
+++ b/app/views/clients/new.html
@@ -34,7 +34,7 @@
             <label for="right-label" class="right inline">Date of Birth</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2 date_picker1" value="02/16/12" data-date-format="mm/dd/yy" id="dp2" ng-model="client.dob">
+            <input type="text" class="span2" datepicker value="02/16/12" data-date-format="mm/dd/yy" id="dp2" ng-model="client.dob">
           </div>
         </div>
       </div>
