--- a/app/views/clients/edit.html
+++ b/app/views/clients/edit.html
@@ -35,7 +35,7 @@
             <label for="right-label" class="right inline">Date of Birth</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" value="02/16/12" data-date-format="dd/mm/yy" ng-model="client.dob">
+            <input type="text" class="span2" datepicker value="02/16/12" data-date-format="dd/mm/yy" ng-model="client.dob">
           </div>
         </div>
       </div>
@@ -65,24 +65,4 @@
       </div>
     </div>
   </form>
-
-  <script>
-    $(function () {
-      window.prettyPrint && prettyPrint();
-      $('#dp1').fdatepicker({
-        format: 'mm-dd-yyyy',
-        disableDblClickSelection: true
-      });
-    });
-
-    $(function() {
-      $( "#datepicker" ).datepicker();
-    });
-
-    $( "#datepicker" ).datepicker({
-      inline: true
-    });
-
-  </script>
-
 </div>
