--- a/app/styles/nav-bar2.css
+++ b/app/styles/nav-bar2.css
@@ -92,6 +92,7 @@ nav a#pull {
 @media only screen and (max-width : 480px) {
     nav {
         border-bottom: 0;
+      font-family: 'BebasFont';
     }
     nav ul {
         display: none;
@@ -99,7 +100,7 @@ nav a#pull {
     }
     nav a#pull {
         display: block;
-        background-color: #283744;
+        background-color: #01596e;
         width: 100%;
         position: relative;
     }
