master : education added

--- a/app/views/educations/new.html
+++ b/app/views/educations/new.html
@@ -1,4 +1,4 @@
-<p>Please add your new experience</p>
+<p>Please add your new education</p>
 
 <div ng-controller="ClientEduNewCtrl">
 
@@ -11,7 +11,7 @@
             <label for="right-label" class="right inline">School Name</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" id="right-label" placeholder="organization name" ng-model="exp.company_name">
+            <input type="text" id="right-label" placeholder="organization name" ng-model="edu.school_name">
           </div>
         </div>
       </div>
