master : show existing edu

--- a/app/views/clients/index.html
+++ b/app/views/clients/index.html
@@ -87,8 +87,7 @@
         <th>faculty</th>
       </tr>
       <tr ng-repeat="edu in educations">
-        <td> <a href="/#/exp/{{ exp.id }}/edit" >{{ exp.company_name }}</a></td>
-        <td>{{ edu.school_name }}</td>
+        <td> <a href="/#/edu/{{ edu.id }}/edit" >{{ edu.school_name }}</a></td>
         <td>{{ edu.city }}</td>
         <td>{{ edu.country }}</td>
         <td>{{ edu.start }}</td>
