--- a/app/views/educations/new.html
+++ b/app/views/educations/new.html
@@ -47,7 +47,7 @@
             <label for="right-label" class="right inline">Start date</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" datepicker value="02/16/12" data-date-format="mm/dd/yy" id="dp1" ng-model="edu.start">
+            <input type="text" class="span2" datepicker data-date-format="mm/dd/yy" id="dp1" ng-model="edu.start">
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@
             <label for="right-label" class="right inline">end date</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" datepicker value="02/16/12" data-date-format="mm/dd/yy" id="dp2" ng-model="edu.end">
+            <input type="text" class="span2" datepicker data-date-format="mm/dd/yy" id="dp2" ng-model="edu.end">
           </div>
         </div>
       </div>
