master : update date format

--- a/app/views/educations/edit.html
+++ b/app/views/educations/edit.html
@@ -46,7 +46,7 @@
             <label for="right-label" class="right inline">Start date</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" datepicker data-date-format="dd/mm/yy" id="dp1" ng-model="edu.start">
+            <input type="text" class="span2" datepicker id="dp1" ng-model="edu.start">
           </div>
         </div>
       </div>
