--- a/app/views/experiences/edit.html
+++ b/app/views/experiences/edit.html
@@ -35,7 +35,7 @@
             <label for="right-label" class="right inline">Start date</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" datepicker data-date-format="mm/dd/yy" id="dp2" ng-model="exp.started_on">
+            <input type="text" class="span2" datepicker id="dp2" ng-model="exp.started_on">
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
             <label for="right-label" class="right inline">end date</label>
           </div>
           <div class="small-9 columns">
-            <input type="text" class="span2" datepicker data-date-format="mm/dd/yy" id="dp2" ng-model="exp.ended_on">
+            <input type="text" class="span2" datepicker id="dp2" ng-model="exp.ended_on">
           </div>
         </div>
       </div>
