--- a/app/styles/normalize.css
+++ b/app/styles/normalize.css
@@ -20,8 +20,8 @@
     text-rendering:optimizeLegibility;
 }
 body {
-    font:400 13px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
-
+    font:400 13px/1.4;
+    font-family:"Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
 }
 
 /*------------------------------------*\
