--- a/app/views/clients/new.html
+++ b/app/views/clients/new.html
@@ -4,14 +4,29 @@
 
   <form ng-submit="create()">
     <div class="row">
+      <div class="small-4 columns">
+        img here
+      </div>
       <div class="small-8 columns">
         <div class="row">
-          <div class="small-3 columns">
-            <label for="right-label" class="right inline">First Name</label>
+          <div class="small-6 columns">
+            <div class="small-3 columns">
+              <label for="right-label" class="right inline">First Name</label>
+            </div>
+            <div class="small-9 columns">
+              <input type="text" id="right-label" placeholder="your first name" ng-model="client.first_name">
+            </div>
           </div>
-          <div class="small-9 columns">
-            <input type="text" id="right-label" placeholder="your first name" ng-model="client.first_name">
+          <div class="small-6 columns">
+            <div class="small-3 columns">
+              <label for="right-label" class="right inline">Last Name</label>
+            </div>
+            <div class="small-9 columns">
+              <input type="text" id="right-label" placeholder="yout last name" ng-model="client.last_name">
+            </div>
           </div>
+
+
         </div>
       </div>
     </div>
