--- a/app/styles/normalize.css
+++ b/app/styles/normalize.css
@@ -21,7 +21,7 @@
 }
 body {
     font:400 13px/1.4;
-    font-family:"Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 /*------------------------------------*\
