--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -165,9 +165,7 @@ body {
   -moz-border-radius: 5px;
   border-radius: 5px;
   padding:3px;
-  margin:3px;
-  margin-top:0px;
-  margin-right:0px;
+  margin:0 0 3px 0 ;
   height:30px;
 
 }
@@ -300,4 +298,107 @@ button, .button {
 
 button:hover, button:focus, .button:hover, .button:focus {
   background-color: #6d544b;
+}
+
+
+#no-more-tables table {
+  width:100%;
+  border-spacing: 0px;
+  border:0px none;
+}
+
+#no-more-tables th{
+  font-weight:normal
+}
+
+#no-more-tables tr{
+  border:0px none;
+}
+
+.buttonrow h2{
+  border-bottom:1px solid #cccccc;
+  border-top: none;
+  line-height:0.1em;
+  text-align: right
+}
+
+.buttonrow h2 span{
+  padding:0 2px;
+  background-color:#ffffff;
+}
+
+
+@media only screen and (max-width: 600px) {
+
+  /* Force table to not be like tables anymore */
+  #no-more-tables table,
+  #no-more-tables thead,
+  #no-more-tables tbody,
+  #no-more-tables th,
+  #no-more-tables td,
+  #no-more-tables tr {
+    display: block;
+    border:0px none;
+  }
+
+  /* Hide table headers (but not display: none;, for accessibility) */
+  #no-more-tables thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  #no-more-tables tr { }
+
+  #no-more-tables td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+    white-space: normal;
+    text-align:left;
+    background-color:#f8f7f5;
+  }
+
+  #no-more-tables td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 0px;
+    left: 0px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    text-align:left;
+
+
+    padding:3px;
+    margin-top:0px;
+    margin-right:0px;
+    height:30px;
+
+
+    font-family: 'BebasFont', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    margin:2px 0 0 0;
+
+
+
+  }
+
+  /*
+    Label the data
+    */
+  #no-more-tables td:before { content: attr(data-title); }
+
+  #no-more-tables td:first-child:before {
+    position:relative;
+    content: none;
+    padding-left: 0%;
+  }
+
+  #no-more-tables td:first-child {
+    padding-left: 0%;
+  }
+
 }
