master : create new id to start from scratch

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="row">
-  <div class="button">Start from scratch</div>
+<div class="row" ng-controller="MainCtrl">
+  <div class="button" ng-click="newClientFromScratch()">Start from scratch</div>
   <div class="button">grab detail from linkedin</div>
 </div>
